--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -2,8 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
+    background-color: #ffffff;
     width: 80%;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    
 }
 
 .navbar .logo{
