--- a/src/pages/Cart/cart.css
+++ b/src/pages/Cart/cart.css
@@ -26,3 +26,109 @@
     border: none;
     margin: 8px 0;
 }
+.empty-cart{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 40vh;
+}
+.empty-cart img{
+    width: 200px;
+}
+.empty-cart p{
+    font-size: 16px;
+    color: #636261;
+}
+.cart-bottom{
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    gap: max(12vw, 20px);
+    margin-bottom: 40px;
+}
+
+.cart-total{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.cart-total h1{
+    font-size: 20px;
+}
+.cart-total-details{
+    display: flex;
+    justify-content: space-between;
+    padding-right: 10px;
+    color: #555;
+}
+.cart-total hr{
+    margin: 12px 0;
+    border: none;
+    height: 1.5px;
+    background-color: #e3e1e1;
+}
+.cart-total button{
+    color: #fff;
+    background-color: tomato;
+    border: none;
+    border-radius: 6px;
+    padding: 12px;
+    font-weight: 500;
+    width: max(16vw, 200px);
+}
+.cart-total button:hover{
+    cursor: pointer;
+}
+.cart-promocode{
+    flex: 1;
+}
+.cart-promocode p{
+    font-size: max(1.1vw, 12px);
+    color: #555;
+    margin-bottom: 15px;
+}
+.cart-promocode-input{
+    display: flex;
+    justify-content: space-between;
+    background-color: #e9e8e8;
+    border-radius: 6px;
+}
+.cart-promocode-input input{
+    border: none;
+    outline: none;
+    height: 38px;
+    width: 80%;
+    background-color: #e9e8e8;
+    padding: 0 14px;
+    border-radius: 6px;
+}
+.cart-promocode-input input:hover{
+    cursor: not-allowed;
+}
+.cart-promocode-input button{
+    width: 100px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    outline: none;
+}
+.cart-promocode-input button:hover{
+    cursor: pointer;
+}
+
+@media screen and (max-width: 750px) {
+    .cart-bottom{
+        flex-direction: column-reverse;
+    }
+    .empty-cart{
+        height: 25vh;
+    }
+    .empty-cart img{
+        width: 150px;
+    }
+    .empty-cart p{
+        font-size: 12px;
+    }
+}
